--- a/style.css
+++ b/style.css
@@ -106,7 +106,7 @@ b{
 
  h1{
     display: block;
-    font-size: 7em;
+    font-size: 3em;
     font-weight: 900;
     color: #3d535f;
  }
@@ -114,6 +114,7 @@ b{
  .multiText{
     color:#7f00ff;
     text-transform: capitalize;
+     font-size:40px;
  }
 
  p{
